--- a/src/main/resources/db/changelog/v1/v1-create-users-table-changelog.yml
+++ b/src/main/resources/db/changelog/v1/v1-create-users-table-changelog.yml
@@ -45,3 +45,9 @@ databaseChangeLog:
                   type: int
                   constraints:
                     nullable: false
+              - column:
+                  name: gender
+                  type: varchar(1)
+                  constraints:
+                    nullable: false
+
